--- a/app/src/main/res/layout/exercise_main.xml
+++ b/app/src/main/res/layout/exercise_main.xml
@@ -1,192 +1,190 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    >
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
-    android:layout_height="500dp"
-    android:layout_gravity="center"
-    >
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/sets_exit_button"
-        android:layout_width="@dimen/fabsize"
-        android:layout_height="@dimen/fabsize"
-        android:src="@drawable/closecross"
-        android:layout_toRightOf="@+id/mainrellayout"
-        android:layout_marginLeft="-28dp"
-        android:layout_alignTop="@+id/mainrellayout"
-        android:layout_marginTop="-28dp"
-        />
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent">
 
-    <RelativeLayout
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:background="@color/colorWhite"
-        android:id="@+id/mainrellayout">
-    <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:orientation="horizontal"
-        android:id="@+id/linlayouttop"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorWhite"
-        android:gravity="center"
-        >
-        <TextView
-            android:layout_width="180dp"
+        <RelativeLayout
+            android:layout_width="280dp"
             android:layout_height="wrap_content"
-            android:text="blaa"
-            android:textSize="25sp"
-            android:layout_gravity="center"
-            android:id="@+id/workout_name_in_ex"
-            android:textStyle="bold"
-            android:layout_marginLeft="40dp"
-            android:gravity="center"
-            />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/multiRowMargin"
-        android:layout_marginBottom="@dimen/multiRowMargin"
-        android:id="@+id/linlayoutnumbers"
-        android:layout_below="@+id/linlayouttop"
-        android:layout_centerHorizontal="true"
-        android:background="@color/transparent">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Set"
-            android:padding="10dp"
-            android:layout_margin="0dp"
-            android:layout_gravity="bottom"
-            android:id="@+id/add_set_button"
-            />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_centerInParent="true"
+            android:background="@color/colorWhite"
+            android:id="@+id/mainrellayout">
             <LinearLayout
-                android:layout_width="160dp"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_width="300dp"
+                android:layout_height="70dp"
+                android:orientation="horizontal"
+                android:id="@+id/linlayouttop"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorWhite"
+                android:gravity="center"
+                >
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:text="REPS"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="20dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="WEIGHT"
-                    android:layout_marginLeft="40dp"/>
+                    android:text="blaa"
+                    android:textSize="25sp"
+                    android:layout_gravity="center"
+                    android:id="@+id/workout_name_in_ex"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="40dp"
+                    android:gravity="center"
+                    android:textColor="@color/primary_text"
+                    />
+
             </LinearLayout>
+
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <EditText
-                    android:layout_width="80dp"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/multiRowMargin"
+                android:layout_marginBottom="@dimen/multiRowMargin"
+                android:id="@+id/linlayoutnumbers"
+                android:layout_below="@+id/linlayouttop"
+                android:layout_centerHorizontal="true"
+                android:background="@color/transparent">
+                <Button
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Add Set"
+                    android:padding="10dp"
+                    android:layout_margin="0dp"
                     android:layout_gravity="bottom"
-                    android:id="@+id/user_reps_input"
-                    android:inputType="number"
-                    android:gravity="center"/>
+                    android:id="@+id/add_set_button"
+                    />
 
-                <EditText
-                    android:layout_width="80dp"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:id="@+id/user_weight_input"
-                    android:inputType="numberDecimal"
-                    android:gravity="center"/>
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="160dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="REPS"
+                            android:layout_gravity="left"
+                            android:layout_marginLeft="20dp"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="WEIGHT"
+                            android:layout_marginLeft="40dp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <EditText
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:id="@+id/user_reps_input"
+                            android:inputType="number"
+                            android:gravity="center"/>
+
+                        <EditText
+                            android:layout_width="80dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="bottom"
+                            android:id="@+id/user_weight_input"
+                            android:inputType="numberDecimal"
+                            android:gravity="center"/>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-<LinearLayout
-    android:layout_width="300dp"
-    android:layout_height="260dp"
-    android:orientation="vertical"
-    android:layout_below="@+id/linlayoutnumbers"
-    android:layout_centerHorizontal="true">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/multiRowMargin"
-        android:layout_marginRight="@dimen/multiRowMargin"
-        android:layout_marginBottom="@dimen/multiRowMargin"
-        android:id="@+id/linlayoutbottom"
-        >
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listview_sets"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        android:layout_weight="10"
-        >
-    </ListView>
-        <LinearLayout
+            <LinearLayout
+                android:layout_width="300dp"
+                android:layout_height="260dp"
+                android:orientation="vertical"
+                android:layout_below="@+id/linlayoutnumbers"
+                android:layout_centerHorizontal="true">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="@dimen/multiRowMargin"
+                    android:layout_marginRight="@dimen/multiRowMargin"
+                    android:layout_marginBottom="@dimen/multiRowMargin"
+                    android:id="@+id/linlayoutbottom"
+                    >
+                    <ListView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/listview_sets"
+                        android:divider="@null"
+                        android:dividerHeight="0dp"
+                        android:layout_weight="10"
+                        >
+                    </ListView>
+                    <LinearLayout
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <ListView
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:id="@+id/listview_sets_old_1"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_coloraccent"
+                            >
+                        </ListView>
+                        <ListView
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:id="@+id/listview_sets_old_2"
+                            android:layout_weight="1"
+                            android:background="@drawable/border_coloraccent"
+                            android:layout_marginTop="-2dp"
+                            >
+                        </ListView>
+                    </LinearLayout>
+                </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/longpressdelete"
+                    android:textStyle="bold"
+                    android:textColor="@color/secondary_text"
+                    android:layout_marginBottom="0dp"
+                    android:gravity="center"
+                    />
+
+            </LinearLayout>
+
+
+
+
+
+        </RelativeLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/sets_exit_button"
+            android:layout_width="@dimen/fabsize"
+            android:layout_height="@dimen/fabsize"
+            android:src="@drawable/closecross"
+            android:layout_toRightOf="@+id/mainrellayout"
+            android:layout_marginLeft="-28dp"
+            android:layout_alignTop="@+id/mainrellayout"
+            android:layout_marginTop="-28dp"
+            />
+
+        <ImageView
             android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/listview_sets_old_1"
-            android:layout_weight="1"
-            android:background="@drawable/border_coloraccent"
-            >
-        </ListView>
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/listview_sets_old_2"
-            android:layout_weight="1"
-            android:background="@drawable/border_coloraccent"
-            android:layout_marginTop="-2dp"
-            >
-        </ListView>
-        </LinearLayout>
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/longpressdelete"
-        android:textStyle="bold"
-        android:textColor="@color/secondary_text"
-        android:layout_marginBottom="0dp"
-        android:gravity="center"
-        />
-
-</LinearLayout>
-
-
+            android:layout_height="70dp"
+            android:src="@drawable/legs"
+            android:elevation="4dp"
+            android:scaleType="centerCrop"
+            android:background="@drawable/rounded_corners"
+            android:id="@+id/eximage"
+            android:layout_alignTop="@+id/mainrellayout"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="-35dp"/>
 
     </RelativeLayout>
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="70dp"
-        android:src="@drawable/legs"
-        android:elevation="4dp"
-        android:scaleType="centerCrop"
-        android:background="@drawable/rounded_corners"
-        android:id="@+id/eximage"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="10dp"/>
-
-</RelativeLayout>
-
-</FrameLayout>
