--- a/app/src/main/res/layout/exercise_new.xml
+++ b/app/src/main/res/layout/exercise_new.xml
@@ -1,26 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    >
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
-    android:layout_height="550dp"
-    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     >
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/edit_ex_exit_button"
-        android:layout_width="@dimen/fabsize"
-        android:layout_height="@dimen/fabsize"
-        android:src="@drawable/closecross"
-        android:layout_toRightOf="@+id/mainrellayout_new"
-        android:layout_marginLeft="-28dp"
-        android:layout_alignTop="@+id/mainrellayout_new"
-        android:layout_marginTop="-28dp"
-        />
-
     <RelativeLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content"
@@ -46,6 +30,7 @@
             android:textStyle="bold"
             android:layout_marginLeft="40dp"
             android:gravity="center"
+            android:textColor="@color/primary_text"
             />
 
     </LinearLayout>
@@ -108,18 +93,21 @@
 
         </LinearLayout>
     </LinearLayout>
+
     </RelativeLayout>
+
     <ListView
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:id="@+id/listview_head_exercises"
-        android:visibility="visible"
+        android:visibility="invisible"
         android:layout_below="@id/mainrellayout_new"
         android:layout_marginLeft="130dp"
         android:background="@color/colorWhite"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="-10dp">
     </ListView>
+
 
     <ImageView
         android:layout_width="100dp"
@@ -129,10 +117,19 @@
         android:scaleType="centerCrop"
         android:background="@drawable/rounded_corners"
         android:id="@+id/eximage_new"
-        android:layout_above="@+id/mainrellayout_new"
+        android:layout_alignTop="@id/mainrellayout_new"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="-35dp"/>
-
+        android:layout_marginTop="-35dp"/>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/edit_ex_exit_button"
+        android:layout_width="@dimen/fabsize"
+        android:layout_height="@dimen/fabsize"
+        android:src="@drawable/closecross"
+        android:layout_alignRight="@+id/mainrellayout_new"
+        android:layout_marginRight="-28dp"
+        android:layout_alignTop="@+id/mainrellayout_new"
+        android:layout_marginTop="-28dp"
+        />
 </RelativeLayout>
 
-</FrameLayout>
+
