--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,6 +52,14 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TransparentDialog" parent="@android:style/Theme">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+
+    </style>
+
 
 
 
