--- a/app/src/main/res/layout/all_workouts.xml
+++ b/app/src/main/res/layout/all_workouts.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="top"
         android:gravity="center"
         android:background="@color/primary"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/primary_text_light"
         />
     <ImageView
         android:layout_below="@+id/workout_name_all"
