--- a/app/src/main/res/layout/exercise_main_static.xml
+++ b/app/src/main/res/layout/exercise_main_static.xml
@@ -7,25 +7,27 @@
     >
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="250dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:id="@+id/mainrellayout_exstatic"
+
         >
 
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_centerInParent="true"
-    android:background="@color/colorWhite"
+    android:background="@drawable/border_coloraccent_bold"
     android:id="@+id/linlayout_ex_static"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     android:paddingBottom="20dp"
-    android:paddingTop="20dp">
+    android:paddingTop="20dp"
+    >
 
         <TextView
             android:layout_width="wrap_content"
