--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,16 +29,18 @@
     <color name="colorBlue">#4c4cff</color>
     <color name="transparent">#000c6515</color>
 
-    <color name="primary">#FF9800</color>
-    <color name="primary_dark">#F57C00</color>
-    <color name="primary_light">#FFE0B2</color>
-    <color name="accent">#f44336</color>
+    <color name="primary">#009688</color>
+    <color name="primary_dark">#00796B</color>
+    <color name="primary_light">#fff176</color>
+    <color name="accent">#FF9800</color>
     <color name="textview_background">#a5d1d1d1</color>
 
     <color name="FABNewEx">#64dd17</color>
     <color name="FABEditEx">#ffea00</color>
 
+
     <color name="primary_text">#212121</color>
+    <color name="primary_text_light">#fafafa</color>
     <color name="secondary_text">#727272</color>
     <color name="icons">#212121</color>
     <color name="divider">#B6B6B6</color>
