--- a/app/src/main/res/layout/exercise_edit.xml
+++ b/app/src/main/res/layout/exercise_edit.xml
@@ -13,7 +13,7 @@
         android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@color/colorWhite"
+        android:background="@drawable/border_coloraccent_bold"
         android:id="@+id/mainrellayout">
     <LinearLayout
         android:layout_width="300dp"
@@ -21,7 +21,6 @@
         android:orientation="horizontal"
         android:id="@+id/linlayouttop"
         android:layout_centerHorizontal="true"
-        android:background="@color/colorWhite"
         android:gravity="center"
         >
         <TextView
