export db to xml onclick

--- a/app/src/main/res/layout/exercise_edit.xml
+++ b/app/src/main/res/layout/exercise_edit.xml
@@ -75,6 +75,7 @@
                     android:id="@+id/user_new_ex_name"
 
                     android:gravity="center"
+                    android:textColor="@color/primary_text"
                     />
 
                 <EditText
