--- a/app/src/main/res/layout/exercise_new.xml
+++ b/app/src/main/res/layout/exercise_new.xml
@@ -73,6 +73,7 @@
                     android:hint="New Exercise Name"
                     android:gravity="center"
                     android:textSize="20sp"
+                    android:textColor="@color/primary_text"
                     />
 
                 <TextView
