export db to xml onclick

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,13 +6,12 @@
     android:layout_height="match_parent"
     android:id="@+id/framemain"
     android:orientation="vertical"
-    tools:context="com.naien.simpleworkouttracker.app.MainActivity"
-    >
+    tools:context="com.naien.workout.MainActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="Workout - Tracker"
+        android:text="@string/workoutmain_header"
         android:id="@+id/overheadtext"
         android:background="@color/primary"
         android:gravity="center"
@@ -32,7 +31,7 @@
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to the Gym already!"
+        android:text="@string/motivation_in_main"
         android:layout_below="@+id/picture"
         android:textSize="20sp"
         android:layout_marginTop="20dp"
@@ -66,7 +65,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Show All"
+            android:text="@string/fab_showall"
             android:id="@+id/ButtonShowAll"
             android:gravity="center"
             android:background="@drawable/textview_selector_backgroun"
@@ -81,7 +80,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add New"
+            android:text="@string/fab_addnew"
             android:id="@+id/ButtonNewWo"
             android:layout_weight="1"
 
@@ -115,17 +114,32 @@
 </ListView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/FABBackup"
+        android:id="@+id/FABRestore"
         android:layout_width="@dimen/fabsize"
         android:layout_height="@dimen/fabsize"
-        android:src="@drawable/addnewcross"
+        android:src="@drawable/fab_restore"
         android:visibility="invisible"
-        android:scaleType="centerCrop"
         android:layout_alignTop="@id/myToolbar"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginTop="@dimen/fabsize_half_negative"
+        android:layout_marginTop="@dimen/fabsizeplus_negative"
+        android:scaleType="centerCrop"
         />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/FABBackup"
+        android:layout_width="@dimen/fabsize"
+        android:layout_height="@dimen/fabsize"
+        android:src="@drawable/fab_backup"
+        android:visibility="invisible"
+        android:layout_alignTop="@id/myToolbar"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="90dp"
+        android:layout_marginTop="@dimen/fabsizeplus_negative"
+        android:scaleType="centerCrop"
+        android:padding="-10dp"
+        />
+
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabAddWorkout"
@@ -134,8 +148,8 @@
         android:src="@drawable/barbell"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/fab_margin"
-        android:layout_alignBottom="@+id/picture"
-        android:layout_marginBottom="@dimen/fabsize_half_negative"
+        android:layout_alignBottom="@+id/myToolbar"
+        android:layout_marginBottom="14dp"
         android:scaleType="centerCrop"
         />
 
