--- a/app/src/main/res/layout/all_workouts.xml
+++ b/app/src/main/res/layout/all_workouts.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="All Workouts"
+        android:text="@string/all_workouts"
         android:textSize="20sp"
         android:id="@+id/workout_name_all"
         android:layout_gravity="top"
