--- a/app/src/main/res/layout/workout_choice_new.xml
+++ b/app/src/main/res/layout/workout_choice_new.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:hint="Choose!"
+        android:hint="@string/new_workout_choose"
         android:textSize="20sp"
         android:id="@+id/workout_combi"
         android:layout_gravity="center"
