--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="fabsize">56dp</dimen>
     <dimen name="fabsize_half">28dp</dimen>
     <dimen name="fabsize_half_negative">-28dp</dimen>
+    <dimen name="fabsizeplus_negative">-65dp</dimen>
 </resources>
