--- a/app/src/main/res/anim/fab_open_backup.xml
+++ b/app/src/main/res/anim/fab_open_backup.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true"
-    android:startOffset="10">
+    >
 
     <scale
-        android:interpolator="@android:anim/overshoot_interpolator"
+        android:interpolator="@android:interpolator/linear"
         android:duration="200"
         android:fromXScale="0.0"
         android:fromYScale="0.0"
@@ -15,7 +15,7 @@
         android:toYScale="1.0"/>
 
     <translate
-        android:interpolator="@anim/my_overshoot"
+        android:interpolator="@android:interpolator/linear"
         android:duration="200"
         android:fromYDelta="13%p"
         android:toYDelta="0.0"
