--- a/app/src/main/res/anim/fab_open_edit_ex.xml
+++ b/app/src/main/res/anim/fab_open_edit_ex.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true"
-    android:startOffset="10">
+    >
 
     <scale
         android:duration="200"
         android:fromXScale="0.0"
         android:fromYScale="0.0"
-        android:interpolator="@android:anim/overshoot_interpolator"
+        android:interpolator="@android:interpolator/linear"
         android:toXScale="1.0"
         android:pivotX="50%"
         android:pivotY="50%"
@@ -18,7 +18,7 @@
         android:fromXDelta="0.0"
         android:fromYDelta="10%p"
         android:toYDelta="0.0"
-        android:interpolator="@android:interpolator/anticipate_overshoot"/>
+        android:interpolator="@android:interpolator/linear"/>
 
 
 </set>
