--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -118,11 +118,11 @@
         android:layout_width="@dimen/fabsize"
         android:layout_height="@dimen/fabsize"
         android:src="@drawable/fab_restore"
-        android:visibility="invisible"
-        android:layout_alignTop="@id/myToolbar"
+        android:visibility="visible"
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/fab_margin"
-        android:layout_marginTop="@dimen/fabsizeplus_negative"
+        android:layout_alignBottom="@+id/myToolbar"
+        android:layout_marginBottom="14dp"
         android:scaleType="centerCrop"
         />
 
@@ -131,11 +131,11 @@
         android:layout_width="@dimen/fabsize"
         android:layout_height="@dimen/fabsize"
         android:src="@drawable/fab_backup"
-        android:visibility="invisible"
-        android:layout_alignTop="@id/myToolbar"
+        android:visibility="visible"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="90dp"
-        android:layout_marginTop="@dimen/fabsizeplus_negative"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_alignBottom="@+id/myToolbar"
+        android:layout_marginBottom="14dp"
         android:scaleType="centerCrop"
         android:padding="-10dp"
         />
